--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,12 +1,12 @@
 @import './utils/variables';
-@import './components/general';
-@import './components/header';
-@import './components/slider';
-@import './components/article';
-@import './components/offer';
-@import './components/team';
-@import './components/customers';
-@import './components/footer';
+@import './components/0general';
+@import './components/1header';
+@import './components/2slider';
+@import './components/3article';
+@import './components/4offer';
+@import './components/5team';
+@import './components/6customers';
+@import './components/7footer';
 @import './components/modal-window';
 @import './components/portfolio-buttons';
-@import './components/portfolio-products';
+@import './components/portfolio-products'
