--- a/css/main.css
+++ b/css/main.css
@@ -280,24 +280,28 @@ ul {
   position: relative;
   z-index: 1;
 }
-.article__container__list {
+
+.article__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   gap: 30px;
   padding-top: 94px;
 }
-.article__container__image {
+
+.article__image {
   width: 270px;
   height: 120px;
 }
-.article__container__heading {
+
+.article__heading {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   color: var(--black-second);
 }
-.article__container__summary {
+
+.article__summary {
   font-size: 14px;
   font-weight: 400;
   line-height: 1.71;
