--- a/sass/components/_3article.scss
+++ b/sass/components/_3article.scss
@@ -5,29 +5,30 @@
   margin: 0 auto;
   position: relative;
   z-index: 1;
-  &__list {
-    display: flex;
-    gap: 30px;
-    padding-top: 94px;
-  }
+}
 
-  &__image {
-    width: 270px;
-    height: 120px;
-  }
+.article__list {
+  display: flex;
+  gap: 30px;
+  padding-top: 94px;
+}
 
-  &__heading {
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    color: var(--black-second);
-  }
+.article__image {
+  width: 270px;
+  height: 120px;
+}
 
-  &__summary {
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    color: var(--gray);
-  }
+.article__heading {
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  color: var(--black-second);
+}
+
+.article__summary {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--gray);
 }
