--- a/sass/components/_0general.scss
+++ b/sass/components/_0general.scss
@@ -36,10 +36,10 @@ ul {
 }
 
 .article__item,
-.offer_item,
+.offer__item,
 .team__list,
 .address,
-.button__unit,
+.button__element,
 .products__picture {
   list-style: none;
 }
