--- a/sass/components/_portfolio-buttons.scss
+++ b/sass/components/_portfolio-buttons.scss
@@ -7,7 +7,7 @@
   margin-top: 94px;
 }
 
-.button__unit--style {
+.button__element--style {
   border-radius: 4px;
   background-color: var(--button-color);
   color: var(--black-second);
