--- a/css/main.css
+++ b/css/main.css
@@ -61,10 +61,10 @@ ul {
 }
 
 .article__item,
-.offer_item,
+.offer__item,
 .team__list,
 .address,
-.button__unit,
+.button__element,
 .products__picture {
   list-style: none;
 }
@@ -274,13 +274,15 @@ ul {
 }
 
 /* <!-- L O R E M  I P S U M --><!-- L O R E M  I P S U M --><!-- L O R E M  I P S U M --><!-- L O R E M  I P S U M --> */
+.article {
+  background: var(--white);
+}
 .article__container {
   width: 1200px;
   margin: 0 auto;
   position: relative;
   z-index: 1;
 }
-
 .article__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -288,19 +290,16 @@ ul {
   gap: 30px;
   padding-top: 94px;
 }
-
 .article__image {
   width: 270px;
   height: 120px;
 }
-
 .article__heading {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   color: var(--black-second);
 }
-
 .article__summary {
   font-size: 14px;
   font-weight: 400;
@@ -310,13 +309,15 @@ ul {
 }
 
 /* <!-- W H A T  W E  D O --><!-- W H A T  W E  D O --><!-- W H A T  W E  D O --><!-- W H A T  W E  D O --> */
+.offer {
+  background: var(--white);
+}
 .offer__container {
   width: 1200px;
   margin: 0 auto;
   position: relative;
   z-index: 1;
 }
-
 .offer__heading {
   font-size: 36px;
   font-weight: 700;
@@ -326,7 +327,6 @@ ul {
   text-align: center;
   padding-top: 94px;
 }
-
 .offer__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -336,11 +336,9 @@ ul {
           justify-content: space-between;
   padding-bottom: 94px;
 }
-
-.offer_item {
+.offer__item {
   position: relative;
 }
-
 .offer__content {
   position: absolute;
   font-weight: 700;
@@ -360,14 +358,12 @@ ul {
 .team {
   background: var(--button-color);
 }
-
 .team__container {
   width: 1200px;
   margin: 0 auto;
   position: relative;
   z-index: 1;
 }
-
 .team__heading {
   font-size: 36px;
   font-weight: 700;
@@ -377,7 +373,6 @@ ul {
   text-align: center;
   padding-top: 94px;
 }
-
 .team__list {
   gap: 30px;
   display: -webkit-box;
@@ -388,15 +383,13 @@ ul {
           justify-content: space-between;
   padding-bottom: 94px;
 }
-
-.team__frame {
+.team__card {
   background: var(--white);
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   text-align: center;
 }
-
 .team__caption {
   font-weight: 500;
   font-size: 16px;
@@ -404,7 +397,6 @@ ul {
   letter-spacing: 0.03em;
   color: var(--black-second);
 }
-
 .team__spec {
   color: var(--gray);
   font-weight: 400;
@@ -424,7 +416,6 @@ ul {
   gap: 10px;
   margin-bottom: 30px;
 }
-
 .social__container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -438,14 +429,12 @@ ul {
   gap: 10px;
   background-color: var(--white);
 }
-
 .social__icon {
   width: 40px;
   height: 40px;
   fill: #afb1b8;
   border-radius: 50%;
 }
-
 .social__icon:hover {
   background-color: var(--blue);
   cursor: pointer;
@@ -454,6 +443,16 @@ ul {
   transition: var(--animation);
 }
 
+/* <!-- C U S T O M E R S --><!-- C U S T O M E R S --><!-- C U S T O M E R S --><!-- C U S T O M E R S --> */
+.customers {
+  background: var(--white);
+}
+.customers__container {
+  width: 1200px;
+  margin: 0 auto;
+  position: relative;
+  z-index: 1;
+}
 .customers__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -468,15 +467,6 @@ ul {
   gap: 30px;
   margin-bottom: 94px;
 }
-
-/* <!-- C U S T O M E R S --><!-- C U S T O M E R S --><!-- C U S T O M E R S --><!-- C U S T O M E R S --> */
-.customers__container {
-  width: 1200px;
-  margin: 0 auto;
-  position: relative;
-  z-index: 1;
-}
-
 .customers__heading {
   font-size: 36px;
   font-weight: 700;
@@ -486,16 +476,13 @@ ul {
   text-align: center;
   padding-top: 94px;
 }
-
 .customers__icon {
   height: 92px;
   width: 170px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
 }
-
-.customers__icon:hover,
-.customers__icon:focus {
+.customers__icon:hover, .customers__icon:focus {
   fill: var(--blue);
   border-color: var(--blue);
   -webkit-transition: var(--animation);
@@ -508,7 +495,6 @@ ul {
   background-color: var(--gray-second);
   height: 252px;
 }
-
 .footer__container {
   width: 1200px;
   margin: 0 auto;
@@ -520,11 +506,6 @@ ul {
   padding-top: 60px;
   gap: 70px;
 }
-
-.logo--color-footer {
-  color: var(--white);
-}
-
 .footer__logo--style {
   text-decoration: none;
   font-family: "Raleway";
@@ -538,43 +519,9 @@ ul {
   display: -ms-flexbox;
   display: flex;
 }
-
-.address {
-  margin-top: 20px;
-}
-
-.address-footer {
-  margin-top: 60px;
-}
-
-.address__item {
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: var(--gray-footer);
-  font-style: normal;
-  padding-top: 9px;
-  color: var(--white);
-}
-
-.footer--color {
-  text-decoration: none;
-  color: var(--gray-footer);
-  font-style: normal;
-}
-
-.address__item:hover,
-.address__item:focus,
-.address__item--secondary-color:hover,
-.address__item--secondary-color:focus {
-  color: var(--white);
-}
-
 .footer__column {
   margin-top: 12px;
 }
-
 .footer__heading {
   font-family: "Roboto";
   font-style: normal;
@@ -585,7 +532,6 @@ ul {
   text-transform: uppercase;
   color: var(--white);
 }
-
 .footer__social {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -593,44 +539,24 @@ ul {
   gap: 10px;
   margin-top: 20px;
 }
-
-.social__icon-footer {
+.footer__social-icon {
   width: 40px;
   height: 40px;
   fill: #afb1b8;
   border-radius: 50%;
   background-color: var(--social-background);
 }
-
-.footer__social__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  fill: var(--white);
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
-  background: rgba(255, 255, 255, 0.1);
-}
-
-.social__icon-footer:hover {
+.footer__social-icon:hover {
   fill: var(--white);
   background: var(--blue);
   -webkit-transition: var(--animation);
   transition: var(--animation);
   cursor: pointer;
 }
-
 .footer__textarea {
   margin-top: 10px;
   padding-left: 16px;
-  padding-top: 18px;
+  padding-top: 16px;
   width: 358px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -642,8 +568,7 @@ ul {
   color: var(--gray-footer);
   font-size: 16px;
 }
-
-.footer-textarea::-webkit-input-placeholder {
+.footer__textarea::-webkit-input-placeholder {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
@@ -652,8 +577,7 @@ ul {
   letter-spacing: 0.03em;
   color: var(--gray-footer);
 }
-
-.footer-textarea::-moz-placeholder {
+.footer__textarea::-moz-placeholder {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
@@ -662,8 +586,7 @@ ul {
   letter-spacing: 0.03em;
   color: var(--gray-footer);
 }
-
-.footer-textarea:-ms-input-placeholder {
+.footer__textarea:-ms-input-placeholder {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
@@ -672,8 +595,7 @@ ul {
   letter-spacing: 0.03em;
   color: var(--gray-footer);
 }
-
-.footer-textarea::-ms-input-placeholder {
+.footer__textarea::-ms-input-placeholder {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
@@ -682,8 +604,7 @@ ul {
   letter-spacing: 0.03em;
   color: var(--gray-footer);
 }
-
-.footer-textarea::placeholder {
+.footer__textarea::placeholder {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
@@ -692,13 +613,11 @@ ul {
   letter-spacing: 0.03em;
   color: var(--gray-footer);
 }
-
 .footer__button {
   margin-top: 50px;
   margin-left: -60px;
 }
-
-.button-icon {
+.footer__button-icon {
   background: var(--blue);
   -webkit-box-shadow: var(--shadow);
           box-shadow: var(--shadow);
@@ -721,7 +640,79 @@ ul {
   background-position-y: 12px;
 }
 
+.address {
+  margin-top: 20px;
+}
+.address__item {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--gray-footer);
+  font-style: normal;
+  padding-top: 9px;
+  color: var(--white);
+}
+.address__item--color {
+  text-decoration: none;
+  color: var(--gray-footer);
+  font-style: normal;
+}
+.address__item--color:hover, .address__item--color:focus {
+  color: var(--white);
+}
+
+.logo--color-footer {
+  color: var(--white);
+}
+
 /* <!-- M O D A L  W I N D O W  --><!-- M O D A L  W I N D O W  --><!-- M O D A L  W I N D O W  --><!-- M O D A L  W I N D O W  --> */
+form {
+  position: relative;
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+label {
+  position: relative;
+  display: block;
+  padding-top: 10px;
+  font-family: "Roboto";
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 19px;
+  letter-spacing: 0.01em;
+  text-align: left;
+}
+label:focus-within svg {
+  fill: var(--blue);
+}
+
+input {
+  position: relative;
+  width: 448px;
+  height: 40px;
+  border-radius: 4px;
+  background: none;
+  border-radius: 4px;
+  border: 1px solid var(--blackho);
+  padding-left: 42px;
+}
+input:focus {
+  -webkit-transition: var(--animation);
+  transition: var(--animation);
+  border-color: var(--blue);
+  outline: none;
+}
+input:checked::before {
+  background-color: var(--blue);
+  border: 1px solid var(--blue);
+  background-image: url("data:image/svg+xml,%3Csvg width='16' height='15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='16' height='15' rx='2' fill='%232196F3'/%3E%3Cpath d='m3.957 7.752-.069-.066-.069.065-.888.842-.076.072.076.073 3.496 3.334.069.066.069-.066 7.504-7.158.076-.073-.076-.072-.882-.841-.069-.066-.069.066-6.553 6.246-2.539-2.422Z' fill='%23fff' stroke='%23fff' stroke-width='.2'/%3E%3C/svg%3E");
+  background-repeat: none;
+  background-position: center;
+  background-size: cover;
+}
+
 .backdrop {
   position: fixed;
   left: 0;
@@ -742,7 +733,7 @@ ul {
   transition: var(--animation);
 }
 
-.modal-window__content {
+.modal__content {
   position: absolute;
   z-index: 0;
   width: 528px;
@@ -757,7 +748,7 @@ ul {
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
-.button-close {
+.modal__button-close {
   margin-left: 490px;
   margin-top: 8px;
   width: 30px;
@@ -776,21 +767,19 @@ ul {
           justify-content: center;
 }
 
-.modal-windows__button-close__icon {
+.modal__button-close-icon {
   position: absolute;
   height: 18px;
   width: 18px;
   cursor: pointer;
 }
-
-.button-close:hover,
-.button-close:focus {
+.modal__button-close-icon:hover, .modal__button-close-icon:focus {
   fill: var(--blue);
   -webkit-transition: var(--animation);
   transition: var(--animation);
 }
 
-.modal-window__heading {
+.modal__heading {
   font-family: Roboto;
   font-size: 20px;
   font-weight: 700;
@@ -802,45 +791,12 @@ ul {
   margin-bottom: 12px;
 }
 
-.input {
+.modal__input {
   outline: none;
   border: 1px solid rgba(33, 33, 33, 0.2);
 }
 
-form {
-  position: relative;
-  padding-left: 40px;
-  padding-right: 40px;
-}
-
-label {
-  position: relative;
-  display: block;
-  padding-top: 10px;
-  font-family: "Roboto";
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 19px;
-  letter-spacing: 0.01em;
-  text-align: left;
-}
-
-label:focus-within svg {
-  fill: var(--blue);
-}
-
-input {
-  position: relative;
-  width: 448px;
-  height: 40px;
-  border-radius: 4px;
-  background: none;
-  border-radius: 4px;
-  border: 1px solid var(--blackho);
-  padding-left: 42px;
-}
-
-.input__icon {
+.modal__input-icon {
   position: absolute;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -849,15 +805,7 @@ input {
   left: 15px;
 }
 
-input:focus,
-textarea:focus {
-  -webkit-transition: var(--animation);
-  transition: var(--animation);
-  border-color: var(--blue);
-  outline: none;
-}
-
-.modal-windows__textarea {
+.modal__textarea {
   padding-left: 15px;
   padding-top: 12px;
   position: relative;
@@ -866,42 +814,35 @@ textarea:focus {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   resize: none;
-}
-
-.modal-windows__textarea::-webkit-input-placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
-
-.modal-windows__textarea::-moz-placeholder {
+.modal__textarea::-webkit-input-placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
-
-.modal-windows__textarea:-ms-input-placeholder {
+.modal__textarea::-moz-placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
-
-.modal-windows__textarea::-ms-input-placeholder {
+.modal__textarea:-ms-input-placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
-
-.modal-windows__textarea::placeholder {
+.modal__textarea::-ms-input-placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
+.modal__textarea::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+.modal__textarea:focus {
+  -webkit-transition: var(--animation);
+  transition: var(--animation);
+  border-color: var(--blue);
+  outline: none;
+}
 
-.modal-windows__text:hover {
+.modal__bottom-text--link:hover {
   display: inline-block;
   text-decoration: underline;
   color: var(--blue);
   cursor: pointer;
-}
-
-input:checked::before {
-  background-color: var(--blue);
-  border: 1px solid var(--blue);
-  background-image: url("data:image/svg+xml,%3Csvg width='16' height='15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='16' height='15' rx='2' fill='%232196F3'/%3E%3Cpath d='m3.957 7.752-.069-.066-.069.065-.888.842-.076.072.076.073 3.496 3.334.069.066.069-.066 7.504-7.158.076-.073-.076-.072-.882-.841-.069-.066-.069.066-6.553 6.246-2.539-2.422Z' fill='%23fff' stroke='%23fff' stroke-width='.2'/%3E%3C/svg%3E");
-  background-repeat: none;
-  background-position: center;
-  background-size: cover;
 }
 
 .margin {
@@ -909,7 +850,7 @@ input:checked::before {
   margin-left: 39px;
 }
 
-.modal-window__button-send {
+.modal__button-send {
   width: 200px;
   height: 50px;
   color: var(--white);
@@ -929,9 +870,7 @@ input:checked::before {
   margin-left: 164px;
   margin-right: 164px;
 }
-
-.modal-window__button-send:hover,
-.modal-window__button-send:focus {
+.modal__button-send:hover, .modal__button-send:focus {
   background: var(--button-color);
   color: var(--blue);
   border-color: var(--blue);
@@ -940,12 +879,12 @@ input:checked::before {
   transition: var(--animation);
 }
 
-.check-box__text {
+.modal__bottom-text {
   margin-top: 10px;
   margin-left: 39px;
 }
 
-.check-box {
+.modal__check-box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -955,8 +894,7 @@ input:checked::before {
   margin-top: 10px;
   margin-left: 15px;
 }
-
-.check-box::before {
+.modal__check-box::before {
   display: block;
   position: absolute;
   content: "";
@@ -979,7 +917,7 @@ input:checked::before {
   margin-top: 94px;
 }
 
-.button__unit--style {
+.button__element--style {
   border-radius: 4px;
   background-color: var(--button-color);
   color: var(--black-second);
@@ -1074,7 +1012,7 @@ input:checked::before {
   overflow: hidden;
 }
 
-.products__picture__slider {
+.products__slider {
   width: 100%;
   height: 100%;
   -webkit-transform: translatey(100%);
@@ -1105,7 +1043,7 @@ input:checked::before {
   color: var(--gray);
 }
 
-.products__picture__slider {
+.products__slider {
   color: var(--white);
   padding-left: 24px;
   padding-top: 49px;
@@ -1119,7 +1057,7 @@ input:checked::before {
   text-align: left;
 }
 
-.picture__box:hover .products__picture__slider {
+.picture__box:hover .products__slider {
   -webkit-transform: translate(0);
           transform: translate(0);
 }
@@ -1152,10 +1090,10 @@ input:checked::before {
   background-image: url("../images/portfolio_img6.jpg");
 }
 
-.img-seven-eight {
+.img-eight {
   background-image: url("../images/portfolio_img7.jpg");
 }
 
-.img-seven-nine {
+.img-nine {
   background-image: url("../images/portfolio_img8.jpg");
 }/*# sourceMappingURL=main.css.map */
