--- a/sass/components/_3article.scss
+++ b/sass/components/_3article.scss
@@ -1,34 +1,38 @@
 /* <!-- L O R E M  I P S U M --><!-- L O R E M  I P S U M --><!-- L O R E M  I P S U M --><!-- L O R E M  I P S U M --> */
 
-.article__container {
-  width: 1200px;
-  margin: 0 auto;
-  position: relative;
-  z-index: 1;
-}
+.article {
+  background: var(--white);
 
-.article__list {
-  display: flex;
-  gap: 30px;
-  padding-top: 94px;
-}
+  &__container {
+    width: 1200px;
+    margin: 0 auto;
+    position: relative;
+    z-index: 1;
+  }
 
-.article__image {
-  width: 270px;
-  height: 120px;
-}
+  &__list {
+    display: flex;
+    gap: 30px;
+    padding-top: 94px;
+  }
 
-.article__heading {
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  color: var(--black-second);
-}
+  &__image {
+    width: 270px;
+    height: 120px;
+  }
 
-.article__summary {
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: var(--gray);
+  &__heading {
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    color: var(--black-second);
+  }
+
+  &__summary {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--gray);
+  }
 }
