--- a/sass/components/_4offer.scss
+++ b/sass/components/_4offer.scss
@@ -1,42 +1,45 @@
 /* <!-- W H A T  W E  D O --><!-- W H A T  W E  D O --><!-- W H A T  W E  D O --><!-- W H A T  W E  D O --> */
+.offer {
+  background: var(--white);
 
-.offer__container {
-  width: 1200px;
-  margin: 0 auto;
-  position: relative;
-  z-index: 1;
-}
-.offer__heading {
-  font-size: 36px;
-  font-weight: 700;
-  line-height: 1.16;
-  letter-spacing: 0.03em;
-  color: var(--black-second);
-  text-align: center;
-  padding-top: 94px;
-}
+  &__container {
+    width: 1200px;
+    margin: 0 auto;
+    position: relative;
+    z-index: 1;
+  }
+  &__heading {
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
+    color: var(--black-second);
+    text-align: center;
+    padding-top: 94px;
+  }
 
-.offer__list {
-  display: flex;
-  justify-content: space-between;
-  padding-bottom: 94px;
-}
+  &__list {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 94px;
+  }
 
-.offer_item {
-  position: relative;
-}
+  &__item {
+    position: relative;
+  }
 
-.offer__content {
-  position: absolute;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.142857143;
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  padding: 30px 0px;
-  bottom: 0;
-  width: 100%;
-  background: rgba(47, 48, 58, 0.8);
-  color: var(--white);
+  &__content {
+    position: absolute;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.142857143;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    padding: 30px 0px;
+    bottom: 0;
+    width: 100%;
+    background: rgba(47, 48, 58, 0.8);
+    color: var(--white);
+  }
 }
