--- a/sass/components/_6customers.scss
+++ b/sass/components/_6customers.scss
@@ -1,33 +1,46 @@
 /* <!-- C U S T O M E R S --><!-- C U S T O M E R S --><!-- C U S T O M E R S --><!-- C U S T O M E R S --> */
 
-.customers__container {
-  width: 1200px;
-  margin: 0 auto;
-  position: relative;
-  z-index: 1;
-}
+.customers {
+  background: var(--white);
 
-.customers__heading {
-  font-size: 36px;
-  font-weight: 700;
-  line-height: 1.16;
-  letter-spacing: 0.03em;
-  color: var(--black-second);
-  text-align: center;
-  padding-top: 94px;
-}
+  &__container {
+    width: 1200px;
+    margin: 0 auto;
+    position: relative;
+    z-index: 1;
+  }
 
-.customers__icon {
-  height: 92px;
-  width: 170px;
-  border: 1px solid #afb1b8;
-  border-radius: 4px;
-}
+  &__list {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    fill: #afb1b8;
+    gap: 30px;
+    margin-bottom: 94px;
+  }
 
-.customers__icon:hover,
-.customers__icon:focus {
-  fill: var(--blue);
-  border-color: var(--blue);
-  transition: var(--animation);
-  cursor: pointer;
+  &__heading {
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
+    color: var(--black-second);
+    text-align: center;
+    padding-top: 94px;
+  }
+
+  &__icon {
+    height: 92px;
+    width: 170px;
+    border: 1px solid #afb1b8;
+    border-radius: 4px;
+
+    &:hover,
+    &:focus {
+      fill: var(--blue);
+      border-color: var(--blue);
+      transition: var(--animation);
+      cursor: pointer;
+    }
+  }
 }
