--- a/sass/components/_0general.scss
+++ b/sass/components/_0general.scss
@@ -39,7 +39,7 @@ ul {
 .offer__item,
 .team__list,
 .address,
-.button__element,
+.button-list__element,
 .products__picture {
   list-style: none;
 }
