--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,7 @@ ul {
 .offer__item,
 .team__list,
 .address,
-.button__element,
+.button-list__element,
 .products__picture {
   list-style: none;
 }
